<resources>
    <string name="app_name">Manage Your Food</string>
    <string name="title_activity_inventory_add">InventoryAdd</string>
    <string name="title_activity_inventory_edit">InventoryEdit</string>
    <string name="inventoryNavTitle">Inventory</string>
    <string name="mealSuggestNavTitle">Meal Suggestions</string>
    <string name="groceryListNavTitle">Grocery List</string>
    <string name="title_activity_meal_suggest">MealSuggest</string>
    <string name="homeNav">Home</string>
    <string name="homeTitle">Home</string>
    <string name="grocListTitle">Grocery Lists</string>
    <string name="invTitle">Inventory Main</string>
    <string name="mealSuggestTitle">Meal Suggestions</string>
    <string name="grocery_lists">Grocery Lists</string>
    <string name="add_list">Add List</string>
    <string name="grocery_list_name">Grocery List Name</string>
    <string name="add_new_inventory">Add New Inventory</string>
    <string name="add">Add</string>
    <string name="or">OR</string>
    <string name="manual_add">Manual Add</string>
    <string name="from_inventory">From Inventory</string>
    <string name="quantity_grocFI">Quantity:</string>
    <string name="deletes">deletes</string>
    <string name="enter_item_s_name">Enter Item\'s Name</string>
    <string name="quantity">Quantity</string>
    <string name="enter_list_s_name">Enter List\'s Name</string>
    <string name="defaultname">DefaultName</string>
    <string name="purch">Purch:</string>
    <string name="expiry">Expiry:</string>
    <string name="xx_xx_xx">XX/XX/XX</string>
    <string name="purchase_mm_dd_yyyy">Purchase: MM/DD/YYYY</string>
    <string name="expiry_mm_dd_yyyy">Expiry: MM/DD/YYYY</string>
    <string name="test_test">Test-Test</string>
    <string name="inventory_name">Inventory Name</string>
    <string name="item">Item</string>
    <string name="enter_item_name">Enter Item Name</string>
</resources>
