<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/design_default_color_primary"
    android:layout_marginBottom="4dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/grocListFoodItemName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:layout_toStartOf="@+id/foodItemQuantityTitle"
            android:layout_toLeftOf="@+id/foodItemQuantityTitle"
            android:gravity="center"
            android:text="@string/test_test"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/foodItemQuantity"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_toStartOf="@+id/deleteIcon"
            android:layout_toLeftOf="@+id/deleteIcon"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/deleteIcon"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/deletes"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <TextView
            android:id="@+id/foodItemQuantityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="9dp"
            android:layout_toStartOf="@+id/foodItemQuantity"
            android:layout_toLeftOf="@+id/foodItemQuantity"
            android:gravity="center"
            android:text="@string/quantity_grocFI"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>