<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inventory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavigationView"
        android:layout_width="416dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/InvNav"
            android:layout_width="92dp"
            android:layout_height="91dp"
            android:background="@android:color/holo_blue_light"
            android:onClick="navInv"
            android:text="@string/inventoryNavTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/GroceryListNav"
            android:layout_width="104dp"
            android:layout_height="94dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@android:color/holo_orange_light"
            android:onClick="navGrocList"
            android:text="@string/groceryListNavTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/homeNav"
            android:layout_width="97dp"
            android:layout_height="95dp"
            android:background="@android:color/holo_red_light"
            android:onClick="navHome"
            android:text="@string/homeNav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/GroceryListNav"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/mealSuggestNav"
            android:layout_width="101dp"
            android:layout_height="92dp"
            android:background="@android:color/darker_gray"
            android:onClick="navMealSuggest"
            android:text="@string/mealSuggestNavTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/InvNav"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="395dp"
        android:layout_height="576dp"
        android:background="@android:color/holo_blue_light"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="120dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/invRecyclerView"
            android:layout_width="373dp"
            android:layout_height="289dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inventoryTitle" />

        <Button
            android:id="@+id/addInvButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="44dp"
            android:text="Add New Inventory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/invRecyclerView" />

        <Button
            android:id="@+id/deleteInvButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="Delete Inventory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintStart_toEndOf="@+id/addInvButton"
            app:layout_constraintTop_toBottomOf="@+id/invRecyclerView" />

        <TextView
            android:id="@+id/inventoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/invTitle"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>